--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,17 @@ TEAM
 .teambutton:hover{
     background-color: gray;
 }
+
+
+
+
+
+/*
+Stats
+*/
+
+
+
 .stats{
     display: flex;
     flex-direction: row;
@@ -430,6 +441,233 @@ footer{
 }
 .footertext a:hover{
     background-color: gray;
+}
+
+
+
+
+
+/*
+Media Queries
+*/
+@media only screen and (max-width: 1500px) { 
+
+    .workphotos img{
+        width: auto;
+        height: 470px;
+        
+    }
+
+}
+@media only screen and (max-width: 1300px) { 
+
+    .workphotos img{
+        width: auto;
+        height: 400px;
+        
+    }
+    .plan ul li{
+        padding: 16px 119px;
+        border-bottom: 1px solid #ddd;
+    }
+
+}
+@media only screen and (max-width: 1200px) { 
+
+    .workphotos img{
+        width: auto;
+        height: 380px;
+        
+    }
+
+}
+@media only screen and (max-width: 1100px) { 
+
+    .workphotos img{
+        width: auto;
+        height: 320px;
+        
+    }
+
+    .perc{
+        background-color: gray;
+    
+        width: 470px;
+        
+    }
+    .pricedivs{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        
+    }
+    .plan{
+        margin: 10px 0;
+    }
+    .plan ul li{
+        padding: 12px 175px;
+        border-bottom: 1px solid #ddd;
+    }
+
+}
+@media only screen and (max-width: 900px) {
+    /* Work */
+    
+    .workphotos{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        /* grid-template-rows: 1fr 1fr; */
+        grid-auto-rows: auto;
+        /* grid-column-gap: 5px; */
+        grid-row-gap: 20px;
+        width: 100%;
+        /* padding: 20px; */
+        /* height: auto; */
+        justify-items: center;
+        
+    }
+    .workphotos img{
+        width: auto;
+        height: 480px;
+        
+    }
+
+    /* */
+
+    .skills{
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        align-items: center;
+        
+        padding: 30px;
+        background-color: rgb(226, 226, 226);
+    }
+    .skillstext{
+        text-align: center;
+    }
+    .skillspercentage p{
+        text-align: center;
+    }
+    
+}
+
+
+
+@media only screen and (max-width: 700px) { 
+
+    /* Team */
+
+    .teaminfo{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        padding: 25px;
+    }
+    .teamimg{
+        width: 50%;
+    }
+    .teaminfo div {
+        padding: 10px;
+    }
+    .stats{
+        padding: 50px 10px;
+    }
+
+    /* Work */
+
+    .workphotos{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        /* grid-template-rows: 1fr 1fr; */
+        grid-auto-rows: auto;
+        /* grid-column-gap: 5px; */
+        grid-row-gap: 20px;
+        width: 100%;
+        /* padding: 20px; */
+        /* height: auto; */
+        justify-items: center;
+        
+    }
+    .workphotos img{
+        width: auto;
+        height: 370px;
+        
+        
+    }
+
+}
+@media only screen and (max-width: 540px) {
+    .workphotos img{
+        width: auto;
+        height: 300px;
+        
+        
+    }
+    .perc{
+        background-color: gray;
+    
+        width: 380px;
+        
+    }
+}
+@media only screen and (max-width: 450px) {
+    /* Navigation */
+    .nav1 a{
+        font-size: 11px;
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+        
+    }
+    .nav2 a{
+        font-size: 11px;
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+    }
+    /* Hero */
+    .hero{
+        margin-top: 40px;
+        /* position: relative; */
+        width: 100%;
+       
+    }
+    .caption h2{
+        font-size: 19px;
+        background-color: black;
+        font-style: italic;
+        padding: 8px;
+    }
+    /* About */
+    .abouticons{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        
+    }
+    /* Work */
+    .workphotos img{
+        width: auto;
+        height: 210px;
+        
+        
+    }
+    /* Skills */
+    .perc{
+        background-color: gray;
+    
+        width: 330px;
+        
+    }
+    /* Prices */
+    .plan ul li{
+        padding: 12px 100px;
+        border-bottom: 1px solid #ddd;
+    }
+
 }
 
 
